# Semantic-ISA

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  acoustic_semantic_ir.py  dspy_multimodal_gepa_demo.py  integration_results.json  pyproject.toml
asir/: __init__.py  architecture.py  harness.py
asir/composites/: __init__.py  perceptual.py  scene.py  strategy.py  translation.py
asir/eval/: __init__.py  __main__.py  compare.py  examples.py  generate_audio.py  integration.py  metrics.py  run.py
asir/gepa/: __init__.py  analysis.py  compiler.py  metric.py  training.py
asir/multimodal/: __init__.py  audio.py  image.py
asir/primitives/: __init__.py  features.py  intent.py  perception.py  scene.py  signal.py  strategy.py
asir/routing/: __init__.py  perceptual.py  pipeline.py  scene.py  strategy.py
asir/types/: __init__.py  dsp.py  features.py  intent.py  perception.py  physical.py  scene.py  strategy.py
examples/: run_demo.py
scripts/: dump_dsp_output.py
tests/: test_deterministic.py  test_integration.py  test_semantic.py
